--- a/verbetering site/salsabil/STYLE.css
+++ b/verbetering site/salsabil/STYLE.css
@@ -120,7 +120,7 @@ li a:hover {
     .right{
         width: 100%;
         min-width: 700px;
-        height: 38%; 
+        height: 40%; 
     }
     
        /* personnel */
@@ -191,7 +191,7 @@ li a:hover {
     footer{
         width: 100%;
         font-size: 75%;
-        position: fixed;
+        position: relative;
     }
      
     /* tarifs */
@@ -204,7 +204,7 @@ li a:hover {
     .right{
         width: 100%;
         min-width: 320px;
-        min-height: 470px;  
+        min-height: 520px;  
     }
     
     .tarifaire{
@@ -227,6 +227,13 @@ li a:hover {
         min-width: 140px;   
     }
     
+    .p-personnel{
+        font-size: 12px;
+    }
+    
+    .personnel{
+        padding-top: 0px;
+    }
     /* contact */
     .grand1{
         width: 100%;
@@ -236,6 +243,7 @@ li a:hover {
     .text-contact{
         width:100%;
         min-width: 323px;
+        min-height: 300px;
     }
     
     .aside1{
@@ -247,16 +255,19 @@ li a:hover {
     .message-contact{
         width: 100%;
         min-width: 275px;
+        min-height: 380px;        
     }
     
     /* accessibilité */
     .grand{
         font-size: 14px;
+        padding-top: 0px;
     }
     
      .img-accessibilité{
         width: 100%;
         min-width: 250px;
+         
     }
 }
 
@@ -454,7 +465,7 @@ td,th, tr{
 
 .grumpy-image{
     width: 40%;
-    height: 80%;
+    height: 70%;
     
     padding-right: 0%;
     padding-bottom: 0%;
@@ -625,7 +636,7 @@ table{
     
     display: block;
     
-    padding-left: 15%;
+    padding-left: 5%;
     margin:4%;
 }
 
