--- a/SUDOKU/style.css
+++ b/SUDOKU/style.css
@@ -1,5 +1,5 @@
 html {
-    background-color: tan;
+    background-color: rgb(76, 118, 153);
 }
 
 
@@ -93,7 +93,7 @@ button {
     position: absolute;
     bottom: 32%;
     right: 10px;
-    width: 10%;
+    width: 15%;
     float: right;
     margin-right: 15%;
 }
@@ -175,7 +175,7 @@ input,
     width: 40px;
     height: 40px;
     float: right;
-    padding-top: 1%;
+    padding-top: 2%;
 }
 
 .zwart {
@@ -333,6 +333,7 @@ h1 {
     text-align: center;
     padding-top: 3%;
     background-color: white;
+    font-size: 15px;
 
 }
 
@@ -416,3 +417,89 @@ h1 {
 }
 
 
+
+
+
+
+/******************** MEDIAQUERY ************************/
+
+
+
+/* responsive */
+
+
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) {
+
+    html {
+        width: 375px;
+
+    }
+    
+    #sudokus{
+        width: 300px;
+        padding-left: 15px;
+    }
+    
+    input,
+    .rood {
+        height: 11%;
+        width: 11%;
+
+    }
+
+
+    #sudoku,
+    #sudoku1 {
+        padding-left: 8%;
+    }
+
+    
+
+    #buttonSudoku {
+        position: absolute;
+        padding-right: 35%;
+        top: 550px;
+    }
+
+    #Crack3 {
+        top: 600px;
+        padding-left: 30%;
+        width: 100%;
+    }
+
+    #Box5 {
+        top: 605px;
+        padding-left: 2%;
+        width: 100%;
+        height: 70%
+    }
+    
+    #Button4{
+       top: 780px;
+        padding-right: 600px;
+    }
+    
+    #Crack2{
+        top: 450px;
+        width: 100%;
+        padding-left: 35%;
+    }
+    
+    #Box4{
+        top: 435px;
+        width: 100%;
+        height: 50%;
+        padding-right: 2%;
+    }
+    
+    #Button3{
+        top: 590px;
+        padding-right: 200px;
+    }
+    
+    #buttonControle{
+        top: 555px;
+        padding-right: 200px;
+    }
+}
