--- a/HEREXAMEN MI2 SPEL/STYLE/style.css
+++ b/HEREXAMEN MI2 SPEL/STYLE/style.css
@@ -1,6 +1,5 @@
 html {
     background-color: #cdb79e;
-    width: 100%;
     height: 100%;
 }
 
@@ -11,19 +10,23 @@ html {
 img {
     width: 45%;
     height: 55%;
-    padding: 10px;
-    padding-left: 50px;
+    padding-left: 0px;
     padding-top: 125px;
 }
 
 h1 {
     text-align: center;
-    font-family: font1;
+    font-size: 60px;
+    padding-top: 2px;
+}
+
+h2 {
+    text-align: center;
     font-size: 45px;
 }
 
 .text1 {
-    width: 40%;
+    width: 38%;
     height: 40%;
     float: right;
     padding-top: 12%;
@@ -39,19 +42,20 @@ a {
 
 .previous,
 .next {
-    margin-top: 22%;
-    ;
+    margin-top: 18%;
     padding-top: 5px;
     border-radius: 10px;
     width: 3%;
     text-align: center;
     font-size: 30px;
+    margin-right: 4%;
 }
 
 .previous {
     background-color: #8b7d6b;
     color: white;
     float: left;
+    margin-left: 2%
 }
 
 .next {
@@ -70,8 +74,6 @@ footer {
     background-color: #8b7d6b;
     width: 99%;
     color: white;
-
-
 }
 
 
@@ -84,6 +86,7 @@ footer {
     justify-content: center;
     display: flex;
     color: white;
+    width: 100;
 
 }
 
@@ -140,7 +143,6 @@ header .navBalk ul {
     padding: 2px;
     margin-top: 6%;
     margin-left: 14%;
-
     border: 50px ridge #8b7d6b;
 }
 
@@ -182,7 +184,7 @@ header .navBalk ul {
     opacity: 1;
 }
 
-#textSudoku{
+#textSudoku {
     color: black;
     font-size: 12px;
     position: absolute;
@@ -193,7 +195,7 @@ header .navBalk ul {
     text-align: left;
 }
 
- #textCrack{
+#textCrack {
     color: black;
     font-size: 12px;
     position: absolute;
@@ -203,6 +205,7 @@ header .navBalk ul {
     -ms-transform: translate(-50%, -50%);
     text-align: left;
 }
+
 /* ==========================================================================
                                  SUDOKU PAGINA
 ========================================================================== */
@@ -214,7 +217,7 @@ header .navBalk ul {
 #sudokus {
     width: 65%;
     height: 50%;
-    padding-top: 12%;
+    padding-top: 5%;
 }
 
 #sudoku {
@@ -229,7 +232,7 @@ header .navBalk ul {
 
 #buttonSudoku {
     position: absolute;
-    bottom: 52%;
+    bottom: 48%;
     right: 5%;
     float: right;
     margin-right: 13%;
@@ -239,9 +242,8 @@ header .navBalk ul {
 
 
 #Crack3 {
-    font-family: ProFont;
     position: absolute;
-    bottom: 70%;
+    bottom: 58%;
     right: 8%;
     width: 34%;
     float: right;
@@ -250,7 +252,7 @@ header .navBalk ul {
 
 #boxx {
     position: absolute;
-    bottom: 63%;
+    bottom: 58%;
     right: 17%;
     width: 46%;
 }
@@ -265,7 +267,7 @@ header .navBalk ul {
 
 #Box5 {
     position: absolute;
-    bottom: 58%;
+    bottom: 52%;
     right: 5%;
     width: 35%;
     float: right;
@@ -300,7 +302,7 @@ input,
 
 button {
     position: absolute;
-    bottom: 32%;
+    bottom: 70%;
     right: 10px;
     width: 15%;
     float: right;
@@ -309,18 +311,23 @@ button {
 
 #Button4 {
     position: absolute;
-    bottom: 45%;
+    bottom: 42%;
     right: 4.5%;
     width: 90%;
     float: right;
 }
 
 #textSudoku {
-    width: 55%;
+    width: 52%;
     padding-top: 0%;
     padding-left: 2%;
     padding-right: 2%;
     border: 2px solid;
+}
+
+#crackTheCode {
+    padding-left: 65%;
+    font-size: 20px;
 }
 
 /* ==========================================================================
@@ -328,8 +335,9 @@ button {
 ========================================================================== */
 
 #paper {
-    width: 65%;
-
+    width: 60%;
+    padding-top: 0%;
+    padding-left: 3%;
 }
 
 #Box3 {
@@ -338,15 +346,15 @@ button {
     width: 100%;
     padding-left: 2%;
     padding-right: 14%;
-    margin-top: 0%;
+    margin-top: 10px;
+    bottom: 600px;
 }
 
 #Crack2 {
     position: absolute;
     bottom: 63%;
-    right: 12%;
-    width: 35%;
-    float: right;
+    width: 100%;
+    padding-left: 40%;
     color: white;
 }
 
@@ -356,15 +364,15 @@ button {
     right: 12%;
     width: 35%;
     float: right;
-    margin-right: 12%;
+    margin-right: 8%;
     color: white;
     margin-top: 20%;
 }
 
 #Button3 {
     position: absolute;
-    bottom: 36%;
-    right: 8%;
+    bottom: 40%;
+    right: 4.5%;
     width: 90%;
     float: right;
 
@@ -373,7 +381,6 @@ button {
 .rij {
     margin-left: 16%;
     color: black;
-
     position: absolute;
     bottom: 25%;
     padding-right: 60%;
@@ -393,19 +400,20 @@ button {
 
 #buttonControle {
     position: absolute;
-    bottom: 43%;
-    right: 9%;
+    bottom: 45%;
+    right: 5%;
     float: right;
     margin-right: 13%;
     height: 3%;
     border-radius: 20px;
+    text-align: center;
 
 }
 
 #boxx2 {
     position: absolute;
     bottom: 55%;
-    right: 24%;
+    right: 20%;
     width: 46%;
 }
 
@@ -421,16 +429,155 @@ button {
                             RESPONSIVE: MEDIAQUERY
 ========================================================================== */
 
-@media only screen and (min-device-width: 375px) and (max-device-width: 667px) {
+@media screen and (max-width:680px) {
 
+    header {
+        width: 670px;
+    }
+
+    img {
+        width: 70%;
+        padding-left: 10px;
+        padding-top: 5px;
+        margin-left: 0%;
+    }
+
+    .previous,
+    .next {
+        padding-top: 5px;
+        border-radius: 10px;
+        font-size: 20px;
+    }
+
+    .text1 {
+        width: 100%;
+        padding-left: 30px;
+        padding-top: 0PX;
+    }
+
+    .slideshow-container {
+        width: 103%;
+        padding-left: 2%;
+    }
+
+    footer {
+        width: 345px;
+        left: 15px;
+    }
+
+    h1 {
+        font-size: 38px;
+    }
+
+    h2 {
+        text-align: center;
+        font-size: 25px;
+        padding-top: 6%;
+    }
+
+    .grid-container {
+        width: 90%;
+    }
+
+    .imgSpel {
+        width: 165%;
+        padding-top: 2%;
+        padding-right: 50%;
+    }
+
+
+    .rij {
+        width: 450px;
+        padding-left: 2%;
+        top: 38%;
+        font-size: 16px;
+    }
+
+
+    #paper {
+        width: 350px;
+        height: 600px;
+        padding-left: -0%;
+
+    }
+
+    #Box3 {
+        font-size: 18px;
+
+    }
+
+    #Crack3 {
+        padding-top: 20%;
+        padding-right: 8%;
+        font-size: 30px;
+    }
+
+    .grid-container {
+        margin-left: 5%;
+    }
+
+    #Box4 {
+        margin-top: 99%;
+        right: 55px;
+    }
+
+    #boxx2 {
+        width: 700px;
+        margin-bottom: -535px;
+        padding-right: 15px;
+    }
+    #buttonControle {
+        margin-top: 80%;
+    }
+
+    #Button3 {
+        margin-top: 95%;
+        left: -15%;
+    }
+
+    #crackTheCode {
+        font-size: 12px;
+        padding-top: 235px;
+        right: 30px;
+    }
+
+    #Box5 {
+        padding-top: 35%;
+    }
+
+
+
+    #Button4 {
+        padding-top: 600px;
+        right: 50px;
+    }
+
+    #buttonSudoku {
+        margin-top: 320px;
+        right: 70px;
+    }
+
+    #boxx {
+        bottom: -200px;
+        padding-left: 1px;
+        width: 700px;
+    }
+
+    .titel {
+        width: 345px;
+    }
+}
+
+/* responsive */
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) {
     html {
         width: 375px;
 
     }
 
     #sudokus {
-        width: 300px;
-        padding-left: 15px;
+        width: 340px;
     }
 
     input,
@@ -440,13 +587,14 @@ button {
 
     }
 
-
-    #sudoku,
-    #sudoku1 {
-        padding-left: 8%;
+    #sudoku {
+        padding-right: 30px;
     }
 
-
+    #sudoku1 {
+        padding-left: 30px;
+        padding-top: 20px;
+    }
 
     #buttonSudoku {
         position: absolute;
@@ -497,4 +645,5 @@ button {
         top: 555px;
         padding-right: 200px;
     }
+
 }
